# arch-comp-benchmarks

./: .gitignore  CHANGELOG.md  LICENSE  README.md  merger.py  paper_table.ipynb  pyproject.toml  pytest.ini  release-notes.md
.github/workflows/: release.yml
arch_comp_moonlight/: matlab.py  nn.py  utils.py
arch_comp_moonlight/baseline/: monitor.py  optimizer.py  simulator.py
arch_comp_moonlight/experiment/: configuration.py  iteration.py  output.py  runner.py  store.py  trace.py
arch_comp_moonlight/monitors/: moonlight.py
arch_comp_moonlight/nn/: monitor.py  runner.py  simulator.py  spec.txt  spec_nn.mls
arch_comp_moonlight/optimizer/: turbo.py
arch_comp_moonlight/optimizers/: turbo.py
benchmarks/: README.md
benchmarks/AFC - Powertrain/: AbstractFuelControl_M1.slx
benchmarks/AT - Transmission/: README.txt
benchmarks/F16/: README.txt  runF16.m
benchmarks/NN - Magnet/: README.txt  narmamaglev_v1.slxc
benchmarks/NN - Magnet/slprj/sim/varcache/narmamaglev_v1/: checksumOfCache.mat  varInfo.mat
benchmarks/NN - Magnet/slprj/sim/varcache/narmamaglev_v1/tmwinternal/: simulink_cache.xml
benchmarks/PM - Pacemaker/: README.txt
benchmarks/SC - Steam Condenser/: README.txt
experiments/: main.py
experiments/f16/: runner.py  simulator.py  spec.mls
experiments/nn/: run_neural.m  runner.py  simulator.py  spec_nn.mls  spec_nnx.mls
experiments/pm/: run_pm.m  runner.py  simulator.py  spec.mls
models/: README.md
models/AFC - Powertrain/: README.txt
models/CC - Chasing Cars/: README.txt
models/F16/: initF16.m
models/NN - Magnet/: narmamaglev_v1.slx
tests/: test_monitor.py  test_nn.py  test_pm.py  test_sample.py  test_store.py
