[tool.poetry]
name = "arch-comp-moonlight"
version = "0.1.0"
description = "Moonlight Benchmarks for the ARCH-COMP FALS competition"
authors = ["Ennio Visconti <ennio.visconti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
