[tool.poetry]
name = "arch-comp-moonlight"
version = "0.1.0"
description = "Moonlight Benchmarks for the ARCH-COMP FALS competition"
authors = ["Ennio Visconti <ennio.visconti@gmail.com>"]
readme = "README.md"
packages = [{include = "arch_comp_moonlight"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-watch = "^4.2.0"
pyright = "^1.1.361"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
