[tool.poetry]
name = "arch-comp-moonlight"
version = "0.1.0"
description = "Moonlight Benchmarks for the ARCH-COMP FALS competition"
authors = ["Ennio Visconti <ennio.visconti@gmail.com>"]
readme = "README.md"
packages = [{ include = "arch_comp_moonlight" }, { include = "experiments" }]

[tool.poetry.dependencies]
python = "~3.11"
matlabengine = "^24.1.2"
numpy = "^1.26.4"
uber-turbo = "0.1.3"
pandas = "^2.2.2"
moonlight = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-watch = "^4.2.0"
pyright = "^1.1.361"
pytest-cov = "^5.0.0"
pandas-stubs = "^2.2.2.240603"
git-changelog = "^2.5.2"

[tool.poetry.scripts]
experiments = "experiments.main:main"

[tool.pyright]
enableTypeIgnoreComments = true
strict = ["."]

[tool.git-changelog]
bump = "auto"
convention = "angular"
in-place = true
marker-line = "<!-- insertion marker -->"
output = "CHANGELOG.md"
parse-refs = false
parse-trailers = false
provider = "github"
repository = "."
sections = "feat,fix,perf,refactor,docs,style,test,chore"
template = "keepachangelog"
version-regex = "^## \\[(?P<version>v?[^\\]]+)"
versioning = "semver"
zerover = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
